[package]
name = "druid-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#druid = { git = "https://github.com/linebender/druid.git", features = ["im"] }
druid = { git = "https://github.com/lapce/druid", branch = "shell_opengl", features = [ "svg", "im", "serde", ] }
custom-utils = "0.10.2"
log = "0.4.17"

